# buzzmobile

./: .gitignore  .gitmodules  .travis.yml  CMakelists.txt  CODEOWNERS  Dockerfile  LICENSE  README.md  circle.yml  config.docif  install  pylintrc
buzzmobile/: CMakeLists.txt  constants.yaml  package.xml  pylintrc  setup.py  todo.py
buzzmobile/drive/: readme.md
buzzmobile/drive/car_interface/: CMakeLists.txt  manifest.xml
buzzmobile/drive/car_interface/src/: arduino.cpp  arduino.h  main.cpp
buzzmobile/drive/horn/: CMakeLists.txt
buzzmobile/drive/horn/src/: horn_node.cpp
buzzmobile/include/: constants.py
buzzmobile/launch/: brake.launch  brake_test.launch  controller.launch  garage_test.launch  gps.launch  lidar.launch  lidar_test.launch  main.launch  main_test.launch  params.launch  readme.md  simulation.launch  steering_test.launch  test.launch  test_params.launch
buzzmobile/launch/includes/: brake.launch  controller.launch  gps.launch  interface.launch  lidar.launch  mapping.launch  mock_sensors.launch  params.launch  sensors.launch  sim_interface.launch  sim_spawn_car.launch  sim_spawn_car.sh  steering.launch  visualization.launch
buzzmobile/launch/lidar_test/: lidar_test.launch  mock_sensors.launch
buzzmobile/launch/steering_test/: visualization.launch
buzzmobile/launch/temp/firmware/: firmware_test.launch
buzzmobile/launch/temp/garage/: garage_test.launch
buzzmobile/launch/temp/lidar/: lidar_test.launch  mock_sensors.launch  visualization.launch
buzzmobile/launch/temp/steering/: mock_sensors.launch
buzzmobile/msg/: CarPose.msg  CarState.msg
buzzmobile/plan/: readme.md
buzzmobile/plan/car_pose_mux/: car_pose_mux.lisp  car_pose_mux.py
buzzmobile/plan/controller/: CMakeLists.txt
buzzmobile/plan/controller/src/: controller.cpp  controller_node.cpp
buzzmobile/plan/steering/: image_utils.py  steering.py
buzzmobile/process/: readme.md
buzzmobile/process/agencynet/: final_weights.model  grabCut.py  grab_cut.py  roadClassify.py  road_classify.py
buzzmobile/process/agencynet/checkpoints/: checkpoint  model.ckpt-149601  model.ckpt-149701  (+3 more)
buzzmobile/process/bearing/: bearing.py  calculate_directions.py  median_filter.py
buzzmobile/process/edge_detector/: #CMakeLists.txt#  edge_detector.cpp
buzzmobile/process/frame_merger/: frame_merger.py
buzzmobile/process/gps_mapper/: gps_mapper.lisp  gps_mapper.py  interpolate.py
buzzmobile/process/lane_detector/: CMakeLists.txt  lane_detector.cpp
buzzmobile/process/lidar_to_frame/: lidar_to_frame.py
buzzmobile/process/projector/: CMakeLists.txt  image_transform.hpp  image_utils.hpp  projector.cpp
buzzmobile/rr_gazebo/: CMakeLists.txt
buzzmobile/rr_gazebo/nodes/: speedi_controller.cpp
buzzmobile/rr_gazebo/scripts/: spawn_speedi_platform.sh
buzzmobile/rr_platform/src/: speedi_joint_updater.cpp
buzzmobile/sense/: readme.md
buzzmobile/sense/controller/: CMakeLists.txt
buzzmobile/sense/controller_teleop/: CMakeLists.txt  controller_node.py  teleop_joy_node.cpp
buzzmobile/sense/gps/: bearing.py  googlemapskey.py  googlemapskey.py.example  gps_mapper.py  interpolate.py  maps.py  path.txt
buzzmobile/sense/image_const/: CMakeLists.txt  image_const.cpp
buzzmobile/sense/inputer/: inputer.lisp  inputer.py  repl.py
buzzmobile/sense/lidar/: lidar.py
buzzmobile/sense/maps_querier/: googlemapskey.py.example  maps_querier.py
buzzmobile/simulation/launch/: buzzmobile_sim.launch  simulation.launch  spawn_buzzmobile_platform.sh  spawn_car.launch
buzzmobile/simulation/sim_car_interface/: CMakeLists.txt
buzzmobile/test/: publish_image.py
buzzmobile/tests/: __init__.py  rostest_utils.py
buzzmobile/tests/process/: test_bearing.py  test_mapper.py
buzzmobile/tests/sense/: test_inputer.py
buzzmobile/tests/simulation/: test_gazebo_connection.py  test_noop.py  test_sanity.py
buzzmobile/tests/test_utils/: mock_nodes.py
buzzmobile/tools/image_const/: image_const.py  readme.md
buzzmobile/tools/mission_control/: Default.perspective  LidarTest.perspective  Test.perspective
buzzmobile/tools/route_mapper/: googlemapskey.py.example  route_mapper.py
buzzmobile/tools/state_viz/: state_viz.py
(+30 files in other folders)
