<?xml version="1.0"?>
<package>
  <name>buzzmobile</name>
  <version>0.0.0</version>
  <description>dank</description>
  <license>dank</license>
  <maintainer email="dank@me.mes">dank</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
