<?xml version="1.0"?>
<package>
  <name>buzzmobile</name>
  <version>0.0.1</version>
  <description>An Autonomous vehicle and parade float.</description>
  <license>MIT Liscence</license>
  <maintainer email="contactgtagency@gmail.com">The Agency</maintainer>
  <maintainer email="joshua.morton@gatech.edu">Joshua Morton</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>usb_cam</build_depend>
  <build_depend>nmea_navsat_driver</build_depend>
  <build_depend>hokuyo_node</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>rqt</build_depend>
  <build_depend>rqt_common_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>hector_gazebo</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>usb_cam</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>rqt</run_depend>
  <run_depend>rqt_common_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>hector_gazebo</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/simulation/models/world/materials"/>
    <gazebo_ros gazebo_media_path="${prefix}/simulation/models/world/materials"/>
  </export>
</package>
